# tron_app

./: .env  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: app_entrypoint.sh  init-db.sh
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2025_04_15_1824-396f67580335_.py
src/core/: config.py  container.py  database.py  exceptions.py  http_client.py  logger.py  uow.py
src/tron_app/application/: container.py  dto.py
src/tron_app/application/usecases/: create_query_usecase.py  exceptions.py  get_queries_usecase.py  post_query_usecase.py  uow_protocol.py
src/tron_app/domain/: exceptions.py
src/tron_app/domain/entities/: wallet.py  wallet_query.py
src/tron_app/infrastructure/: container.py  exception.py  models.py
src/tron_app/infrastructure/gateway/: tron_api_gateway.py
src/tron_app/infrastructure/repository/: wallet_query_repository.py
src/tron_app/presentation/api/: __init__.py
src/tron_app/presentation/api/v1/: api.py  protocols.py
src/tron_app/presentation/api/v1/schemas/: requests.py  responses.py
tests/: conftest.py
tests/integration/: conftest.py  mock.py  test_app.py
tests/unit/mocks/: shared_data.py
tests/unit/mocks/mocks_infrasturcture/: mock_gateway.py  mock_repository.py  mock_uow.py
tests/unit/test_usecases/: test_create_query_uc.py  test_get_queries_uc.py  test_post_query_uc.py
tests/unit/test_writing_db/: test_uow.py
